assets.quells.net

--- a/projects/2009 Mao.md
+++ b/projects/2009 Mao.md
@@ -2,6 +2,6 @@
 
 ![Mao Zedong Painting][mao-timeline]
 
-[mao-timeline]: http://quells.net/DP/proj/mao.jpg
+[mao-timeline]: http://assets.quells.net/DP/proj/mao.jpg
 
 Exploring modern Chinese history (and alternative interface design).
