--- a/projects/2012 Hue.md
+++ b/projects/2012 Hue.md
@@ -2,6 +2,6 @@
 
 ![Hue Screenshot][screenshot]
 
-[screenshot]: http://quells.net/hue/ScreenshotSquare.png
+[screenshot]: http://assets.quells.net/hue/ScreenshotSquare.png
 
 A gesture based color selection tool for iPhone and iPod Touch. This is my first iOS app; you can find it on the App Store.
